[Statistics Card] - Add last 6 months phrase to monthly reading x axis - Solve this month's target value not visible - Reading Ratio by Genre Added, Modified Color Palette
[CreatePostPage]
- Move back, save button position to bottom and secure
- Troubleshooting a book not being saved when it was closed
- Modify the entire UI

Newly added file
- HomeGenreDoughnutChart.tsx

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -31,3 +31,7 @@
   border-radius: 8px;
   position: relative;
 }
+
+.title-input::placeholder {
+  color: #fff;  /* 흰색 */
+}
